#3: Added docker_db_environment and performance package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,6 @@ keywords = ['exasol', 'testing']
 
 [tool.poetry.dependencies]
 python = ">=2.7"
-pyodbc = "=2.1.1"
+pyodbc = "*"
+numpy = "*"
+scipy = "*"
