#5: Updated to Python3
1. Using latest files from db of exatest
2. Added missing dependencies to toml
3. Merged latest version of udf from script-languages
4. Convert performace/__init__.py to Python3 (just one line)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ keywords = ['exasol', 'testing']
 
 
 [tool.poetry.dependencies]
-python = ">=2.7"
-pyodbc = "*"
-numpy = "*"
-scipy = "*"
+python = ">=3.6"
+pyodbc = ">=4.0.27"
+numpy = "1.19.5"
+scipy = "1.2.1"
+docker = ">=5.0.3"
