Install ODBC driver and EXAPLUS in GH Action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Spawn EXASOL environemnt
         run: ./start-test-env spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666 --db-mem-size 4GB
         working-directory: ../integration-test-docker-environment
+      - name: Get ODBC driver
+        run: |
+          mkdir -p downloads/ODBC
+          curl -s https://www.exasol.com/support/secure/attachment/155337/EXASOL_ODBC-7.0.11.tar.gz| tar -C downloads/ODBC --strip-components 1 -zxf -
+        working-directory: ..
+      - name: Get EXAPLUS
+        run: |
+          mkdir -p downloads/EXAPLUS
+          curl -s https://www.exasol.com/support/secure/attachment/155319/EXAplus-7.0.11.tar.gz | tar -C downloads/EXAPLUS --strip-components 1 -zxf -
+        working-directory: ..
       - name: Setup Python 3.6 for integration-test-docker-environment
         uses: actions/setup-python@v2
         with:
@@ -21,4 +31,6 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
       - name: Run all tests
-        run: ./run_all_tests.sh
+        run: ./run_all_tests.sh "localhost:8888" ../downloads/ODBC/lib/linux/x86_64/libexaodbc-uo2214lv2.so
+        env:
+          EXAPLUS: ../downloads/EXAPLUS
