--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,6 @@ jobs:
         run: ./run_all_tests.sh "localhost:8888" ../downloads/ODBC/lib/linux/x86_64/libexaodbc-uo2214lv2.so
         env:
           EXAPLUS: ../downloads/EXAPLUS
-          TEST_DOCKER_NETWORK_NAME: db_network_exasol_test
+          TEST_DOCKER_NETWORK_NAME: db_network_test
           TEST_ENVIRONMENT_NAME: test
 
