--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Get ODBC driver
+        run: |
+          bash .github/workflows/scripts/download_odbc_driver.sh "$(pwd)"
+        working-directory: ..
+      - name: Get EXAPLUS
+        run: |
+          run: |
+            bash .github/workflows/scripts/download_exaplus.sh "$(pwd)"
+        working-directory: ..
       - name: Checkout test environment
         run: git clone https://github.com/exasol/integration-test-docker-environment.git
         working-directory: ..
       - name: Spawn EXASOL environemnt
         run: ./start-test-env spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666 --db-mem-size 4GB
         working-directory: ../integration-test-docker-environment
-      - name: Get ODBC driver
-        run: |
-          "bash .github/workflows/scripts/download_odbc_driver.sh $(pwd)"
-        working-directory: ..
-      - name: Get EXAPLUS
-        run: |
-          run: |
-            "bash .github/workflows/scripts/download_exaplus.sh $(pwd)"
-        working-directory: ..
       - name: Setup Python 3.6 for integration-test-docker-environment
         uses: actions/setup-python@v2
         with:
