#5: Updated to Python3 (#6)
1. Using latest files from db of exatest
2. Added missing dependencies to toml
3. Merged latest version of udf from script-languages
4. Convert performace/__init__.py to Python3 (just one line)
5. Using fixes of UDF.TestCase.expectedFailureIfLang() from DB.
6. Added tests for test framework.
    * Refactored exatest/TestProgram (moved ODBC setup into separate class)
    *  Added docker_environment_test.py
    * Fixed UDF test invocation
    * Added sleep between ftp server up and down in ftp test
    * Added a incorrect SQL file as canary: This ensures that only the expected SQL file is being loaded.
7. Removed esmtp flag from SMPTServer: Python3 supports ESMTP natively, and apparently there is no easy way to turn ESMTP off
8. Replaced copy of ftpserver from pyftpdlib with dependency to pyftpdlib.
9. Split up tests/exatest/servers/py in 3 files.
10. Transform ftp server test test_server_is_chdir_safe from python.unittest to exatest.
11. Moved EXAPLUS and ODBC driver download into scripts.
12. GH Actions:
    * Install ODBC driver and EXAPLUS in GH Action
13. Added a new command line parameter which allows definition of lang-path
14. Removed lint check (as it still uses Python2.7).
15.  Refactored ODBCClient._setScriptLanguagesFromArgs(): Use getScriptLanguagesFromArgs().

Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

Co-authored-by: sir-exasol

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,7 @@ description = "Python Test framework for Exasol database tests"
 license = "MIT"
 
 authors = [
-    "Thomas Uebensee <ext.Thomas.Uebensee@exasol.com>",
-    "Torsten Kilias <torsten.kilias@exasol.com>"
+    "Exasol AG <opensource@exasol.com>"
 ]
 
 readme = 'README.md'  # Markdown files are supported
@@ -18,9 +17,13 @@ homepage = "https://github.com/exasol/exasol-python-test-framework"
 include = ["exatest","udf"]
 keywords = ['exasol', 'testing']
 
+exclude = ["lang"]
+
 
 [tool.poetry.dependencies]
-python = ">=2.7"
-pyodbc = "*"
-numpy = "*"
-scipy = "*"
+python = ">=3.6"
+pyodbc = ">=4.0.27"
+numpy = "1.19.5"
+scipy = "1.2.1"
+docker = ">=5.0.3"
+pyftpdlib = ">=1.5.6"
