#11: Fix release-droid github action

--- a/.github/workflows/release_droid_prepare_original_checksum.yml
+++ b/.github/workflows/release_droid_prepare_original_checksum.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Dummy step
-        run: echo "Nothing to do"thing to do"
+        run: echo "Nothing to do"
