--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -9,7 +9,27 @@ on:
 
 
 jobs:
-  release:
+  check-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Python 3.6 for exasol-python-test-framework
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6
+
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: 1.1.6
+
+      - name: Check Release
+        run: ./scripts/build/check_release.sh
+
+  integration-tests:
     runs-on: ubuntu-18.04
 
     steps:
@@ -23,24 +43,36 @@ jobs:
       - name: Checkout test environment
         run: git clone https://github.com/exasol/integration-test-docker-environment.git
         working-directory: ..
+      - name: Setup Python 3.6 for integration-test-docker-environment
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6
       - name: Spawn EXASOL environemnt
         run: ./start-test-env spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666 --db-mem-size 4GB
         working-directory: ../integration-test-docker-environment
-      - name: Setup Python 3.6 for integration-test-docker-environment
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2.0.0
+      - name: Run all tests
+        run: ./scripts/test/run_all_tests.sh "localhost:8888" ../downloads/ODBC/lib/linux/x86_64/libexaodbc-uo2214lv2.so
+        env:
+          EXAPLUS: ../downloads/EXAPLUS
+          TEST_DOCKER_NETWORK_NAME: db_network_test
+          TEST_ENVIRONMENT_NAME: test
+
+  upload:
+    runs-on: ubuntu-18.04
+    needs: [integration-tests, check-release]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python 3.6 for release
         uses: actions/setup-python@v2
         with:
           python-version: 3.6
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
-      - name: Run all tests
-        run: ./run_all_tests.sh "localhost:8888" ../downloads/ODBC/lib/linux/x86_64/libexaodbc-uo2214lv2.so
-        env:
-          EXAPLUS: ../downloads/EXAPLUS
-          TEST_DOCKER_NETWORK_NAME: db_network_test
-          TEST_ENVIRONMENT_NAME: test
       - name: Build Release
         run: |
-          bash ./build_release.sh
+          bash ./scripts/build/build_release.sh
       - name: Upload assets to the GitHub release draft
         uses: shogo82148/actions-upload-release-asset@v1
         with:
