--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "exasol-python-test-framework"
-version = "0.2.0"
+version = "0.3.0"
 description = "Python Test framework for Exasol database tests"
 
 license = "MIT"
@@ -27,3 +27,7 @@ numpy = ">=1.19.5"
 scipy = ">=1.2.1"
 docker = ">=5.0.3"
 pyftpdlib = ">=1.5.6"
+
+[tool.poetry.dev-dependencies]
+toml = ">=0.10.2"
+gitpython = ">=2.1.0"
