--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,10 @@ exclude = ["lang"]
 
 
 [tool.poetry.dependencies]
-python = ">=3.6,<4"
-pyodbc = ">=4.0.27"
-numpy = ">=1.19.5"
-scipy = ">=1.2.1"
+python = ">=3.8,<3.11"
+pyodbc = "^4.0.27"
+numpy = ">=1.22"
+scipy = "^1.7.0"
 # The `sys_platform` marker makes sure the docker dependency is only installed on
 # non windows platforms.
 docker = { version = ">=5.0.3", markers = "sys_platform != 'win32'"}
@@ -32,4 +32,4 @@ pyftpdlib = ">=1.5.6"
 
 [tool.poetry.dev-dependencies]
 toml = ">=0.10.2"
-gitpython = ">=2.1.0"
+gitpython = ">=3.1.0"
