--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -40,16 +40,12 @@ jobs:
       - name: Get EXAPLUS
         run: |
           bash .github/workflows/scripts/download_exaplus.sh "$(pwd)/.."
-      - name: Checkout test environment
-        run: git clone https://github.com/exasol/integration-test-docker-environment.git
-        working-directory: ..
       - name: Setup Python 3.8 for integration-test-docker-environment
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
       - name: Spawn EXASOL environemnt
-        run: ./start-test-env spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666 --db-mem-size 4GB
-        working-directory: ../integration-test-docker-environment
+        run: poetry run python3 -m exasol_integration_test_docker_environment.main spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-forward 6666
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.1.6
         with:
