--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -22,9 +22,9 @@ jobs:
           python-version: 3.8
 
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.0.0
+        uses: abatilo/actions-poetry@v2.1.6
         with:
-          poetry-version: 1.1.6
+          poetry-version: 1.2.1
 
       - name: Check Release
         run: ./scripts/build/check_release.sh
@@ -40,18 +40,20 @@ jobs:
       - name: Get EXAPLUS
         run: |
           bash .github/workflows/scripts/download_exaplus.sh "$(pwd)/.."
-      - name: Checkout test environment
-        run: git clone https://github.com/exasol/integration-test-docker-environment.git
-        working-directory: ..
       - name: Setup Python 3.8 for integration-test-docker-environment
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Spawn EXASOL environemnt
-        run: ./start-test-env spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666 --db-mem-size 4GB
-        working-directory: ../integration-test-docker-environment
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.1.4
+        uses: abatilo/actions-poetry@v2.1.6
+        with:
+          poetry-version: 1.2.1
+      - name: Install dependencies
+        run: poetry install
+      - name: Spawn EXASOL environemnt
+        run: |
+          poetry run python3 -m exasol_integration_test_docker_environment.main spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666
+          sleep 120 # wait for SLC to be unpacked
       - name: Run all tests
         run: ./scripts/test/run_all_tests.sh "localhost:8888" ../downloads/ODBC/lib/linux/x86_64/libexaodbc-uo2214lv2.so
         env:
@@ -69,7 +71,9 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.1.4
+        uses: abatilo/actions-poetry@v2.1.6
+        with:
+          poetry-version: 1.2.1
       - name: Build Release
         run: |
           bash ./scripts/build/build_release.sh
