--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "exasol-python-test-framework"
-version = "0.4.0"
+version = "0.5.0"
 description = "Python Test framework for Exasol database tests"
 
 license = "MIT"
@@ -33,3 +33,6 @@ pyftpdlib = ">=1.5.6"
 [tool.poetry.dev-dependencies]
 toml = ">=0.10.2"
 gitpython = ">=3.1.0"
+[tool.poetry.group.dev.dependencies]
+exasol-integration-test-docker-environment = {url = "https://github.com/exasol/integration-test-docker-environment/releases/download/1.1.0/exasol_integration_test_docker_environment-1.1.0-py3-none-any.whl"}
+
