--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,10 @@ exclude = ["lang"]
 
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
-pyodbc = "^4.0.27"
-numpy = ">=1.22"
-scipy = "^1.7.0"
+python = ">=3.10,<4"
+pyodbc = "^5.1.0"
+numpy = ">=1.26"
+scipy = "^1.13.0"
 # The `sys_platform` marker makes sure the docker dependency is only installed on
 # non windows platforms.
 docker = { version = ">=5.0.3", markers = "sys_platform != 'win32'"}
@@ -34,5 +34,5 @@ pyftpdlib = ">=1.5.6"
 toml = ">=0.10.2"
 gitpython = ">=3.1.0"
 [tool.poetry.group.dev.dependencies]
-exasol-integration-test-docker-environment = {url = "https://github.com/exasol/integration-test-docker-environment/releases/download/1.1.0/exasol_integration_test_docker_environment-1.1.0-py3-none-any.whl"}
+exasol-integration-test-docker-environment = "^3.0.0"
 
