--- a/.github/workflows/check_setup_py.yaml
+++ b/.github/workflows/check_setup_py.yaml
@@ -4,20 +4,11 @@ on: [push, pull_request]
 
 jobs:
   check_setup_py:
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.8]
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - uses: abatilo/actions-poetry@v3
-      with:
-        poetry-version: 1.3
+    - name: Setup Python & Poetry Environment
+      uses: ./.github/actions/prepare_poetry_env
     - name: Run packaging update
       run: bash githooks/update_packaging.sh
     - name: Show changes on working copy
