--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -9,15 +9,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.8
-
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: 1.3
+      - name: Setup Python & Poetry Environment
+        uses: ./.github/actions/prepare_poetry_env
 
       - name: Check Release
         run: ./scripts/build/check_release.sh
