--- a/.github/actions/prepare_poetry_env/action.yml
+++ b/.github/actions/prepare_poetry_env/action.yml
@@ -8,12 +8,13 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/setup-python@v5
-      with:
-        python-version: ${{ inputs.python-version }}
     - uses: abatilo/actions-poetry@v3
       with:
         poetry-version: 1.8.2
+    - uses: actions/setup-python@v5
+      with:
+        python-version: ${{ inputs.python-version }}
+        cache: 'poetry'
     - name: Poetry install
       run: poetry install
       shell: bash
