--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -10,7 +10,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: ./.github/actions/prepare_poetry_env
-
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
+        with:
+          python-version: '3.10'
+          poetry-version: '1.8.2'
       - name: Check Release
         run: ./scripts/build/check_release.sh
