--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -9,15 +9,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v5
+      - name: Setup Python & Poetry Environment
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
-          python-version: 3.8
-
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: 1.3
-
+          python-version: '3.10'
+          poetry-version: '1.8.2'
       - name: Check Release
         run: ./scripts/build/check_release.sh
