--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,15 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
 
 jobs:
   integration_tests:
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10', '3.11', '3.12']
     steps:
       - uses: actions/checkout@v4
       - name: Get ODBC driver
@@ -14,16 +18,11 @@ jobs:
       - name: Get EXAPLUS
         run: |
           bash .github/workflows/scripts/download_exaplus.sh "$(pwd)/.."
-      - name: Setup Python 3.8 for integration-test-docker-environment
-        uses: actions/setup-python@v5
+      - name: Setup Python & Poetry Environment
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
-          python-version: 3.8
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: 1.3
-      - name: Install dependencies
-        run: poetry install
+          python-version: ${{ matrix.python-version }}
+          poetry-version: '1.8.2'
       - name: Spawn EXASOL environemnt
         run: |
           poetry run python3 -m exasol_integration_test_docker_environment.main spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666
