--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -16,22 +16,21 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Python 3.8 for exasol-python-test-framework
-        uses: actions/setup-python@v5
+      - name: Setup Python & Poetry Environment
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
-          python-version: 3.8
-
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: 1.3
+          python-version: '3.10'
+          poetry-version: '1.8.2'
 
       - name: Check Release
         run: ./scripts/build/check_release.sh
 
   integration-tests:
-    runs-on: ubuntu-18.04
-
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10', '3.11', '3.12']
     steps:
       - uses: actions/checkout@v4
       - name: Get ODBC driver
@@ -40,16 +39,11 @@ jobs:
       - name: Get EXAPLUS
         run: |
           bash .github/workflows/scripts/download_exaplus.sh "$(pwd)/.."
-      - name: Setup Python 3.8 for integration-test-docker-environment
-        uses: actions/setup-python@v5
+      - name: Setup Python & Poetry Environment
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
-          python-version: 3.8
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: 1.3
-      - name: Install dependencies
-        run: poetry install
+          python-version: ${{ matrix.python-version }}
+          poetry-version: '1.8.2'
       - name: Spawn EXASOL environemnt
         run: |
           poetry run python3 -m exasol_integration_test_docker_environment.main spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666
@@ -62,18 +56,15 @@ jobs:
           TEST_ENVIRONMENT_NAME: test
 
   upload:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: [integration-tests, check-release]
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Python 3.8 for release
-        uses: actions/setup-python@v5
+      - name: Setup Python & Poetry Environment
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
-          python-version: 3.8
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
-        with:
-          poetry-version: 1.3
+          python-version: '3.10'
+          poetry-version: '1.8.2'
       - name: Build Release
         run: |
           bash ./scripts/build/build_release.sh
