--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -37,7 +37,7 @@ jobs:
         id: get-odbc-driver
         run: |
           FILE=$(bash .github/workflows/scripts/download_odbc_driver.sh "$(pwd)/..")
-          echo so-file=\'$FILE\' >> "$GITHUB_OUTPUT"
+          echo so-file="$FILE" >> "$GITHUB_OUTPUT"
       - name: Get EXAPLUS
         run: bash .github/workflows/scripts/download_exaplus.sh "$(pwd)/.."
       - name: Setup Python & Poetry Environment
@@ -47,12 +47,17 @@ jobs:
           poetry-version: '1.8.2'
       - name: Spawn EXASOL environemnt
         run: |
-          poetry run python3 -m exasol_integration_test_docker_environment.main spawn-test-environment --environment-name test --database-port-forward 8888 --bucketfs-port-forward 6666
+          poetry run python3 -m exasol_integration_test_docker_environment.main \
+              spawn-test-environment \
+              --environment-name test \
+              --database-port-forward 8888 \
+              --bucketfs-port-forward 6666
           sleep 120 # wait for SLC to be unpacked
       - name: Run all tests
         # run: poetry run scripts/test/run_locally.sh --server "localhost:8888" --odbc-driver="../downloads/ODBC/lib/linux/x86_64/libexaodbc-uo2214lv2.so"
-        run: poetry run scripts/test/run_locally.sh --server "localhost:8888" \
-             --odbc-driver="${{ steps.get-odbc-driver.outputs.so-file }}"
+        run: |
+          poetry run scripts/test/run_locally.sh --server "localhost:8888" \
+          --odbc-driver="${{ steps.get-odbc-driver.outputs.so-file }}"
         env:
           EXAPLUS: ../downloads/EXAPLUS
           TEST_DOCKER_NETWORK_NAME: db_network_test
