Updated github workflows 4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
               --bucketfs-port-forward 6666
           sleep 120 # wait for SLC to be unpacked
       - name: Run all tests
-        run: poetry run scripts/test/run_locally.sh \
+        run: |
+          poetry run scripts/test/run_locally.sh \
              --server "localhost:8888" \
              --odbc-driver="${{ steps.get-odbc-driver.outputs.so-file }}"
         env:
