--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
           python-version: ${{ matrix.python-version }}
-          poetry-version: '1.8.2'
-      - name: Spawn EXASOL environemnt
+          poetry-version: '2.1.2'
+      - name: Spawn EXASOL environment
         run: |
           poetry run -- python3 -m exasol_integration_test_docker_environment.main \
               spawn-test-environment \
