--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
         uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
         with:
           python-version: "3.10"
+          poetry-version: '2.1.2'
 
       - name: Build Artifacts
         run: poetry build
