--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -10,9 +10,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
         with:
           python-version: '3.10'
-          poetry-version: '2.1.2'
+          poetry-version: "2.1.2"
       - name: Check Release
         run: poetry run -- python3 -u scripts/build/check_release.py
