--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -4,7 +4,9 @@ on: pull_request
 
 jobs:
   check-version-numbers:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
         with:
