--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@1.6.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@v5
         with:
           python-version: '3.10'
           poetry-version: "2.1.2"
